# spacemesh-faucet-rs

./: .keyfile  Cargo.toml  LICENSE  build.rs  todo
src/: encoding.rs  faucet.rs  grpc.rs  main.rs  page.html
src/proto/: account.proto
